--- a/default-config.json
+++ b/default-config.json
@@ -202,7 +202,7 @@
                             "key": "display_shortcuts",
                             "name": "Display shortcuts",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shift+?"
+                            "default":  "Ctrl+Shift+/"
                         },
                         {
                             "key": "custom_command",
