--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,8 @@ set (DTNG_CPP_FILES
     utils.cpp
     pagesearchbar.cpp
     termqsettings.cpp
+    termbasedialog.cpp
+    termcommandlinkbutton.cpp
     encodeplugin/encodepanelplugin.cpp
     encodeplugin/encodepanel.cpp
     encodeplugin/encodelistview.cpp
@@ -153,6 +155,8 @@ set (DTNG_HEADER_FILES
     pagesearchbar.h
     termqsettings.h
     termqsettings_p.h
+    termbasedialog.h
+    termcommandlinkbutton.h
     encodeplugin/encodepanelplugin.h
     encodeplugin/encodepanel.h
     encodeplugin/encodelistview.h
