--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 export QT_SELECT=5
+export DH_VERBOSE=1
 include /usr/share/dpkg/default.mk
 
 DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
@@ -9,9 +10,12 @@ DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 	dh $@ --parallel
 
 override_dh_shlibdeps:
-	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info -l$(shell pwd)/debian/dde-sharefiles/usr/share/deepin-terminal/sharefiles/lib
+	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info -l/usr/lib
 
 override_dh_auto_configure:
-	dh_auto_configure -- DAPP_VERSION=$(DEB_VERSION_UPSTREAM) DEFINES+="VERSION=$(DEB_VERSION_UPSTREAM)" LIB_INSTALL_DIR=/usr/lib/$(DEB_HOST_MULTIARCH)
-
- 
+	dh_auto_configure -- \
+	-DCMAKE_BUILD_TYPE=Release \
+	-DCMAKE_INSTALL_PREFIX=/usr \
+	-DAPP_VERSION=$(DEB_VERSION_UPSTREAM) \
+	-DVERSION=$(DEB_VERSION_UPSTREAM) \
+	LIB_INSTALL_DIR=/usr/lib/$(DEB_HOST_MULTIARCH)
