--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -118,7 +118,7 @@
                             "key": "close_workspace",
                             "name": "Close workspace",
                             "type": "shortcut",
-                            "default":  "Ctrl+Alt+W"
+                            "default":  "Ctrl+Shift+W"
                         },
                         {
                             "key": "previous_workspace",
