Type:fix bug-18068, bug-18072
Description: not record encoding set. can't load and highlight old
encoding.

RootCause: No design before.

Solution: make encoding set into config file. start load and highlight and
scroll to the top.

--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -35,6 +35,12 @@
                             "hide": true,
                             "reset": true,
                             "default": "Linux"
+                        },
+                        {
+                            "key": "encoding",
+                            "hide": true,
+                            "reset": true,
+                            "default": "UTF-8"
                         }
                     ]
                 }
