--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: deepin-terminal
+Source: deepin-terminal-reborn
 Section: utils
 Priority: optional
 Maintainer: Deepin Terminal <terminal@deepin.com>
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9), pkg-config, qt5-qmake, libqt5widgets5, libqt5co
 Standards-Version: 3.9.8
 Homepage: https://www.deepin.com/
 
-Package: deepin-terminal
+Package: deepin-terminal-reborn
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: deepin terminal
