Type: fix bug-18018
Description: change search function default shortcut key.

RootCause:Null

Solution:

--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -70,7 +70,7 @@
                             "key": "search",
                             "name": "Search",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shift+F"
+                            "default":  "Ctrl+F"
                         },
                         {
                             "key": "zoom_in",
