--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -60,6 +60,8 @@
                             "type": "shortcut",
                             "default":  "Ctrl+Shift+C"
                         },
+
+
                         {
                             "key": "paste",
                             "name": "Paste",
@@ -71,6 +73,12 @@
                             "name": "Search",
                             "type": "shortcut",
                             "default":  "Ctrl+F"
+                        },
+                        {
+                            "key": "Close_other_workspaces",
+                            "name": "Close_other_workspaces",
+                            "type": "shortcut",
+                            "default":  "Ctrl+W"
                         },
                         {
                             "key": "zoom_in",
