Type: fix bug-18896
Description: default shortcut is incorrect.

RootCause:Null

Solution:

--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -186,7 +186,7 @@
                             "key": "close_window",
                             "name": "Close window",
                             "type": "shortcut",
-                            "default":  "Ctrl+Q"
+                            "default":  "Ctrl+Alt+Q"
                         },
                         {
                             "key": "close_other_windows",
