--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -261,7 +261,7 @@
                             "key": "auto_copy_selection",
                             "type": "checkbox",
                             "text": "Copy on select",
-                            "default": false
+                            "default": true
                         }
                     ]
                 },
