--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -69,8 +69,8 @@
                             "default":  "Ctrl+Shift+V"
                         },
                         {
-                            "key": "search",
-                            "name": "Search",
+                            "key": "find",
+                            "name": "Find",
                             "type": "shortcut",
                             "default":  "Ctrl+F"
                         },
