Type: fix bug-20756
Description: install depend "expect"

RootCause:Null

Solution:

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: https://www.deepin.com/
 
 Package: deepin-terminal-reborn
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, expect
 Description: deepin terminal
  Deepin Terminal
